# KernelImageProcessing

./: CMakeLists.txt  README.md  main.cpp
Kernel/: AbstractKernel.h  GaussianKernel3x3.cpp  GaussianKernel3x3.h  GaussianKernel5x5.cpp  GaussianKernel5x5.h  Kernel.cpp  Kernel.h  prova.h  selectKernel.h
KernelImageProcessingCUDA/: CMakeLists.txt  main.cu
KernelImageProcessingCUDA/Kernel/: AbstractKernel.h  GaussianKernel3x3.cpp  GaussianKernel3x3.h  GaussianKernel5x5.cpp  GaussianKernel5x5.h
KernelImageProcessingCUDA/KernelProcessingTests/: CUDAKernelTestConstant.h  CUDAKernelTestGlobal.h  CUDAKernelTestShared.h  CUDAKernelTestSharedOld.h  SequentialKernelTest.h
KernelImageProcessingCUDA/PaddedImage/: FlatPaddedImage.cpp  FlatPaddedImage.h  imageReconstruction.h
KernelImageProcessingPThread/: CMakeLists.txt  main.cpp
KernelImageProcessingPThread/Kernel/: AbstractKernel.h  GaussianKernel3x3.cpp  GaussianKernel3x3.h  GaussianKernel5x5.cpp  GaussianKernel5x5.h
KernelImageProcessingPThread/KernelProcessingTests/: parallelKernelTest.h  parallelKernelTestBlocks.h  parallelKernelTestRowsColumnsDivision.h  parallelKernelTestRowsDivision.h  sequentialKernelTest.h
KernelImageProcessingPThread/PaddedImage/: PaddedImage.cpp  PaddedImage.h  imageReconstruction.h
KernelProcessingTests/: parallelKernelTest.h  sequentialKernelTest.h
PaddedImage/: PaddedImage.cpp  PaddedImage.h
